# reference-design-can-asset-tracker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.rst  VERSION  prj.conf  sample.yaml  west.yml
.github/workflows/: build_zephyr.yml  release.yml
.reuse/: dep5
boards/: aludel_elixir_ns.conf  aludel_elixir_ns.overlay  aludel_mini_nrf9160_ns.conf  aludel_mini_nrf9160_ns.overlay  aludel_mini_v1_sparkfun9160_ns.conf  aludel_mini_v1_sparkfun9160_ns.overlay  nrf7002dk_nrf5340_cpuapp_ns.conf  nrf7002dk_nrf5340_cpuapp_ns.overlay  nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay  nrf_dk_common.dtsi
child_image/mcuboot/boards/: aludel_mini_v1_sparkfun9160.overlay
pipelines/: json-to-lightdb.yml
src/: app_can.c  app_can.h  app_gnss.c  app_gnss.h  app_rpc.c  app_rpc.h  app_sensors.c  app_sensors.h  app_settings.c  app_settings.h  app_state.c  app_state.h  app_work.c  app_work.h  can_forwarder.c  can_forwarder.h  json_helper.h  main.c
src/battery_monitor/: battery.c
src/lib/inc/: minmea_compat.h
utility/: cold_chain_splashscreen.xcf
